# particles-demo

./: CMakeLists.txt  README.md
assets/docs/: help.html
assets/shaders/: common_fragment.glsl  common_vertex.glsl  single_texture_fragment.glsl  single_texture_vertex.glsl  sprite_fragment.glsl  sprite_geometry.glsl  sprite_vertex.glsl
core/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  Properties.cpp  Properties.h
filesys/: CMakeLists.txt  FileSystem.cpp  FileSystem.h
gfx/: CMakeLists.txt  Camera.cpp  Camera.h  CommonTechnique.cpp  CommonTechnique.h  GLApi.cpp  GLApi.h  GfxMath.cpp  GfxMath.h  GridMesh.cpp  GridMesh.h  SpriteMesh.cpp  SpriteMesh.h  SpriteTechnique.cpp  SpriteTechnique.h  Technique.cpp  Technique.h  Texture2D.cpp  Texture2D.h
mathscript/: CMakeLists.txt  Exception.cpp  Exception.h  Generator.cpp  Generator.h  MathScript.cpp  MathScript.h  Parser.cpp  Parser.h  Program.cpp  Program.h  README.md  RuntimeScope.cpp  RuntimeScope.h  STNode.cpp  STNode.h  STNodePrintVisitor.cpp  STNodePrintVisitor.h  STSerializer.cpp  STSerializer.h  StreamTokenizer.cpp  StreamTokenizer.h  StringTokenizer.cpp  StringTokenizer.h  TokenType.cpp  TokenType.h  TokenizerInterface.h
particle_editor/: CMakeLists.txt  EditorLogger.cpp  EditorLogger.h  EditorView.cpp  EditorView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PropertiesModel.cpp  PropertiesModel.h  PropertiesTreeView.cpp  PropertiesTreeView.h  icons.qrc  main.cpp
particle_editor/images/: LICENSE.txt
particles/: CMakeLists.txt  MathScriptProgram.cpp  MathScriptProgram.h  MathScriptProperty.cpp  MathScriptProperty.h  Properties.cpp  Properties.h  Random.h  ScriptScope.cpp  ScriptScope.h  SpriteEmitter.cpp  SpriteEmitter.h  SpriteEmitterSrc.cpp  SpriteEmitterSrc.h  SpriteEmitterType.cpp  SpriteEmitterType.h
test/: CMakeLists.txt
test/testmathscript/: CMakeLists.txt  TestGenerator.cpp  TestMathScript.cpp  TestParser.cpp  TestProgram.cpp  TestStreamTokenizer.cpp  TestStringTokenizer.cpp
